--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ github-copilot/
 iterm2/
 octoffers/
 nvim/lazy-lock.json
+
+*.DS_Store
+
+*tt.*
+*.tests
+*doc/tags
+*debug
+*.repro
+*foo.*
+**.log
+*data
