--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,9 @@
 import = [
     "~/.config/alacritty/themes/themes/coolnight.toml"
 ]
+# import = [
+#     "~/.config/alacritty/themes/themes/bluish.toml"
+# ]
 [env]
 TERM = "xterm-256color"
 
